%% OrbitClear - Diagrama de Classes (UML) - Grupo 89
%% Visualizar em https://mermaid.live
classDiagram
    class ClienteOperador {
        +int id
        +String nomeAgencia
        +String paisOrigem
        +String contatoEmail
    }

    class ObjetoOrbital {
        +int id
        +String nome
        +TipoObjeto tipo
        +int altitudeKm
        +double massaKg
        +NivelRisco nivelRiscoColisao
        +StatusRemocao statusRemocao
        +ClienteOperador dono
        +String impactoNaTerra()
    }

    class OperadorMissao {
        +int id
        +String nomeEmpresa
        +String pais
        +TecnologiaCaptura tecnologiaCaptura
        +double capacidadeKgPorMissao
        +double precoBaseUSD
    }

    class ContratoRemocao {
        +int id
        +ObjetoOrbital objeto
        +OperadorMissao operador
        +LocalDate dataJanela
        +double valorUSD
        +StatusContrato status
    }

    class OrbitClearService {
        -List~ClienteOperador~ clientes
        -List~ObjetoOrbital~ objetos
        -List~OperadorMissao~ operadores
        -List~ContratoRemocao~ contratos
        +cadastrarCliente(String, String, String) ClienteOperador
        +listarClientes() List
        +buscarClientePorId(int) ClienteOperador
        +atualizarCliente(int, String, String, String) boolean
        +cadastrarOperador(String, String, TecnologiaCaptura, double, double) OperadorMissao
        +listarOperadores() List
        +buscarOperadorPorId(int) OperadorMissao
        +atualizarOperador(int, String, String, TecnologiaCaptura, double, double) boolean
        +cadastrarObjeto(String, TipoObjeto, int, double, NivelRisco, StatusRemocao, ClienteOperador) ObjetoOrbital
        +listarObjetos() List
        +buscarObjetoPorId(int) ObjetoOrbital
        +atualizarStatusObjeto(int, StatusRemocao) boolean
        +listarContratos() List
        +buscarContratoPorId(int) ContratoRemocao
        +agendarContrato(int, int, LocalDate, double) ContratoRemocao
        +concluirContrato(int) boolean
    }

    class TipoObjeto {
        <<enumeration>>
        SATELITE_MORTO
        ESTAGIO_FOGUETE
        FRAGMENTO
    }
    class NivelRisco {
        <<enumeration>>
        BAIXO
        MEDIO
        ALTO
        CRITICO
    }
    class StatusRemocao {
        <<enumeration>>
        CATALOGADO
        EM_NEGOCIACAO
        AGENDADO
        REMOVIDO
    }
    class StatusContrato {
        <<enumeration>>
        PROPOSTO
        AGENDADO
        CONCLUIDO
        CANCELADO
    }
    class TecnologiaCaptura {
        <<enumeration>>
        ARPAO
        REDE
        BRACO_ROBOTICO
        LASER
    }

    ClienteOperador "1" --> "N" ObjetoOrbital : possui
    ObjetoOrbital "1" --> "N" ContratoRemocao : alvo de
    OperadorMissao "1" --> "N" ContratoRemocao : executa
    OrbitClearService --> ClienteOperador : gerencia
    OrbitClearService --> ObjetoOrbital : gerencia
    OrbitClearService --> OperadorMissao : gerencia
    OrbitClearService --> ContratoRemocao : gerencia
    ObjetoOrbital --> TipoObjeto
    ObjetoOrbital --> NivelRisco
    ObjetoOrbital --> StatusRemocao
    OperadorMissao --> TecnologiaCaptura
    ContratoRemocao --> StatusContrato
